add fabfile for automated deploys

--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -6,6 +6,6 @@ stop on shutdown
 respawn
 
 setuid ubuntu
-chdir /home/ubuntu/sites/tdd-lists-staging/source/tddsuperlists
+chdir /home/ubuntu/sites/tdd-lists-staging/source/
 
-exec ../../virtualenv/bin/gunicorn --bind unix:/tmp/tdd-lists-staging.socket superlists.wsgi:application
+exec ../virtualenv/bin/gunicorn --bind unix:/tmp/tdd-lists-staging.socket superlists.wsgi:application
